Alteração na pagina cadastro e ajustes na barra de menu

--- a/login.html
+++ b/login.html
@@ -39,10 +39,10 @@
                 <div class="container-fluid" id="menu2" style="padding-bottom: 10px;">
                     <ul style="list-style-type: none;">
                         <div class="row">    
-                            <li class="col-sm"><a href="#cursos" style="color: white;"> Cursos</a></li>
+                            <li class="col-sm"><a href="#Cursos" style="color: white;">Cursos</a></li>
                             <li class="col-sm"><a href="#Sobre" style="color: white;">Sobre</a></li>
-                            <li class="col-sm"></li>
-                            <li class="col-sm"></li>
+                            <!--<li class="col-sm"><a href="#lidosR" style="color: white;">Lidos recentemente</button></a></li>-->
+                            <li class="col-sm"><a href="#Validar" style="color: white;">Validar Certificado </a></li>
                         </div>
                     </ul>
             </div>
