--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                            
 
-                            <a href="login.html" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="_img/_icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
+                            <a href="login.php" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="_img/_icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
                             
                         </form>
                     </div>
