Pequenas correções nas paginas

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <td>
                             <div class="imagen">
                                 <div class="curso">
-                                    <a target="_blank" href="./_img/_icon/arduino.png">
+                                    <a target="_blank" href="./_img/_icon/Arduino.png">
                                         <img src= "./_img/_icon/arduino.png" align="right" class= "imagen" >
                                     </a>
                                 <b><p>Arduino</p></b>
