--- a/Cadastro.html
+++ b/Cadastro.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
         <link rel="stylesheet" type="text/css" href="_css/style.css" media="screen" />
-        <!------------------<script src="_css/_javascript/script.js"></script>----->
+        <script src="_css/_javascript/script.js"></script>
 
         <!--------------------- Bootstrap ---------------------------->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
