--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </BANNERAD>
            
                 <p></p>
-                <h4 id="destaque" >Plataforma EAD para Ensinar Cursos Online.</h4>
+                <h4 style = "background: linear-gradient(to bottom, #3d844b 0%, #606060 100%); padding: 15px;">Plataforma EAD para Ensinar Cursos Online.</h4>
                
                 <table>
                     <h4 style = 'padding: 10px;'> Seja qual for a carreira, temos o curso ideal </h4>
