--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                 <div class="container-fluid" id="menu2" style="padding-bottom: 10px;">
                     <ul style="list-style-type: none;">
                         <div class="row">    
-                            <li class="col-sm"><a href="#Cursos" style="color: white;">Cursos</a></li>
+                            <li class="col-sm"><a href="cursos.html" style="color: white;">Cursos</a></li>
                             <li class="col-sm"><a href="#Sobre" style="color: white;">Quem Sobre</a></li>
-                            <li class="col-sm"><a href="#lidosR" style="color: white;">Contato</button></a></li>
                             <li class="col-sm"><a href="#Validar" style="color: white;">Validar Certificado </a></li>
                         </div>
                     </ul>
