--- a/login.html
+++ b/login.html
@@ -39,9 +39,8 @@
                 <div class="container-fluid" id="menu2" style="padding-bottom: 10px;">
                     <ul style="list-style-type: none;">
                         <div class="row">    
-                            <li class="col-sm"><a href="#Cursos" style="color: white;">Cursos</a></li>
-                            <li class="col-sm"><a href="#Sobre" style="color: white;">Sobre</a></li>
-                            <!--<li class="col-sm"><a href="#lidosR" style="color: white;">Lidos recentemente</button></a></li>-->
+                            <li class="col-sm"><a href="cursos.html" style="color: white;">Cursos</a></li>
+                            <li class="col-sm"><a href="#Sobre" style="color: white;">Quem Sobre</a></li>
                             <li class="col-sm"><a href="#Validar" style="color: white;">Validar Certificado </a></li>
                         </div>
                     </ul>
@@ -61,14 +60,14 @@
                     <tr>
                         <td>Login:</td>
                         <td align="left">
-                            <input type ="text" name="CPFLogin" size= "52" maxlength="20" placeholder="CPF" required="required" >
+                            <input type ="text" name="CPFLogin"  maxlength="10" placeholder="CPF" required="required" >
                         </td>
                     </tr>
                     
                     <tr>
                         <td>Senha:</td>
                         <td align="left">
-                            <input type ="password" name="senha" size= "52" maxlength="20" placeholder="******" required="required">
+                            <input type ="password" name="senha"  maxlength="10" placeholder="******" required="required">
                         </td>
                     </tr>
                     
