pagina dos cursos

--- a/index.html
+++ b/index.html
@@ -119,36 +119,35 @@
                     <tr>
                         <td>
                             <div>
-                                <div class="curso">
+                                <div class="curso" >
                                     <a target="_blank" href="./_img/_icon/python.png">
-                                        <img src= "./_img/_icon/python.png" align="right" class= "imagen" >
+                                        <img src= "./_img/_icon/python.png" id ="destaque">
                                     </a>
                                 <b><p>Python</p></b>
                             </div>
                         </div>
-                        <td>
+                    </td>
                         <td>
                             <div class="imagen">
                                 <div class="curso">
                                     <a target="_blank" href="./_img/_icon/html.png">
-                                        <img src= "./_img/_icon/html.png" align="right" class= "imagen" >
+                                        <img src= "./_img/_icon/html.png" id ="destaque" >
                                     </a>
                                 <b><p>Html</p></b>
                             </div>
-                        
                         </div>
-                        <td>
+                    </td>
                         <td>
                             <div class="imagen">
                                 <div class="curso">
                                     <a target="_blank" href="./_img/_icon/micro.png">
-                                        <img src= "./_img/_icon/micro.png" align="right" class= "imagen" >
+                                        <img src= "./_img/_icon/micro.png" id ="destaque" >
                                     </a>
                                 <b><p>Manuteção de micro</p></b>
                             </div>
                         </div>
-                        <td>
-                    <tr>
+                    </td>
+                </tr>
                 </table>
                 <hr class="style1">
         </div>
