Criação da pagina detalhes cursos

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
-        <link rel="stylesheet" type="text/css" href="_css/styleCursos.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="_css/style.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="_css/styleshowcurso.css" media="screen" />
         <script src="_css/_javascript/script.js"></script>
 
         <!--------------------- Bootstrap ---------------------------->
@@ -47,34 +48,53 @@
                     </ul>
             </div>
             </header>
-        
+            <div class="Logocurso" style="margin-left:20px;">
+                <table>
+                    <td>
+                        <img src="_img/_icon/python.png">
+                    </td>
+                    <td>
+                        <h3>Curdo de</h3>
+                        <h1>Introdução a programação com Python</h1>
+                    </td>
+                </table>
+            </div>
+            <div class="infocurso" style="margin-left:25%;">
+                <table>
+                    <td>
+                        <h3>Inscrito</h3>
+                        <img src="_img/_icon/naoinscrito.PNG" id="estadoInscrito">
+                    </td>
+                    <td>
+                        <img src="_img/linha.png" id="linha">
+                    </td>
+                    <td>
+                        <h3>Preço</h3>
+                        <br>
+                        <h2>Gratis</h2>
+                    </td>
+                    <td>
+                        <img src="_img/linha.png" id="linha">
+                    </td>
+                    <td>
+                        <form action="cadastro.html" method="get" >
+                            <input  type="submit" value="Faça o login ou o Cadastro">
+                        </form>					        
+                    </td>
+                </table>
+            </div>
 
-            <header id="sumario">
-                <h1>Sumário</h1>
-                <nav>
-                    <ul>
-                        <li id="link-unidade"><a href="#Python">Python</a></li>
-                        <li id="link-fracao"><a href="#Html">Html</a></li>
-                        <li id="link-fracao"><a href="#Micro">Manuteção de micro</a></li>
-                    </ul>
-                </nav>
-            </header>
+            <div class="descricao" style="margin-left: 5%;">
+                <p>Hoje em dia, algoritmos computacionais estão presentes em quase tudo na nossa vida. Além 
+                    dos tradicionais computadores e notebooks, muitos estão totalmente acostumados com o uso
+                     de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas 
+                     personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia.</p>
+            </div>
 
+            <div class="conteudo" style="margin-left: 5%;">
+    
+            </div>
 
-            <section id="Python">
-
-                <section id="unidade" class="content">
-                    <article class="box">
-                        <hgroup id="infoUnidade">
-                            <h1>Unidade 1</h1>
-                            <ul>
-                            <h2>1 - Revisão: frações, potenciação, radiciação, produtos notáveis.</h2>
-                            <h2>2 - Funções: função do 1º grau, função do 2º grau, logaritmo, exponencial, seno, cosseno.</h2>
-                            </ul>
-                        </hgroup>
-                    </article>
-                </section>
-            </section> 
 
         </div>
 
