Correção na logocurso

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -54,7 +54,7 @@
                         <img src="_img/_icon/python.png">
                     </td>
                     <td>
-                        <h3>Curdo de</h3>
+                        <h3>Curso de</h3>
                         <h1>Introdução a programação com Python</h1>
                     </td>
                 </table>
@@ -63,6 +63,7 @@
                 <table>
                     <td>
                         <h3>Inscrito</h3>
+                        <br>
                         <img src="_img/_icon/naoinscrito.PNG" id="estadoInscrito">
                     </td>
                     <td>
