Ajustes na preview do curso

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -78,6 +78,7 @@
                         <img src="_img/linha.png" id="linha">
                     </td>
                     <td>
+                        <h3>Começar Agora</h3>
                         <form action="cadastro.html" method="get" >
                             <input  type="submit" value="Faça o login ou o Cadastro">
                         </form>					        
@@ -85,15 +86,42 @@
                 </table>
             </div>
 
-            <div class="descricao" style="margin-left: 5%;">
+            <div class="descricao">
                 <p>Hoje em dia, algoritmos computacionais estão presentes em quase tudo na nossa vida. Além 
                     dos tradicionais computadores e notebooks, muitos estão totalmente acostumados com o uso
                      de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas 
                      personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia.</p>
             </div>
 
+            <div class="apresentacaocurso">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VSFgDCtfS_8" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>    
+            </div>
+
             <div class="conteudo" style="margin-left: 5%;">
-    
+                <h2>Conteudo</h2>
+                <table>
+                    <td>
+                        <h3>1º Modulo: Intrudução ao curso</h3>
+                        <ul>
+                            <li>O que é programação?</li>
+                            <li>Linguagens</li>
+                            <li>Linguagem utilizada no curso</li>
+                            <li>Preparação da maquina para inicar os estudos</li>
+                        </ul>
+                        <h3>2º Modulo: Introdução a programação</h3>
+                        <ul>
+                            <li>Variáveis</li>
+                            <li>Estruturas Sequencial</li>
+                            <li>Entrada e Saída</li>
+                            <li>Estruturas condicionais</li>
+                            <li>Estruturas de repetição</li>
+                            <li>Listas</li>
+                        </ul>
+
+                    </td>
+                </table>
             </div>
 
 
