--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -42,7 +42,7 @@
                     <ul style="list-style-type: none;">
                         <div class="row">    
                             <li class="col-sm"><a href="cursos.html" style="color: white;">Cursos</a></li>
-                            <li class="col-sm"><a href="sobre.html" style="color: white;">Quem Sobre</a></li>
+                            <li class="col-sm"><a href="sobre.html" style="color: white;">Sobre</a></li>
                             <li class="col-sm"><a href="#Validar" style="color: white;">Validar Certificado </a></li>
                         </div>
                     </ul>
