Criação da pagina viewcurso e adição da apostila

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -120,6 +120,10 @@
                             <li>Listas</li>
                         </ul>
 
+                        <form action="viewcurso.html" method="get" >
+                            <input  type="submit" value="Começar">
+                        </form>					        
+
                     </td>
                 </table>
             </div>
