--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <td>
                             <div>
                                 <div class="curso" >
-                                    <a target="_blank" href="./_img/_icon/python.png">
+                                    <a target="_blank" href="detalhescursos.html">
                                         <img src= "./_img/_icon/python.png" id ="destaque">
                                     </a>
                                 <b><p>Python</p></b>
