Ajuste para visualização no firefox

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -59,7 +59,7 @@
                     </td>
                 </table>
             </div>
-            <div class="infocurso" style="margin-left:25%;">
+            <div class="infocurso" style="margin-left:25%; max-width: 160px;">
                 <table>
                     <td>
                         <h3>Inscrito</h3>
@@ -99,7 +99,7 @@
                 allowfullscreen></iframe>    
             </div>
 
-            <div class="conteudo" style="margin-left: 5%;">
+            <div class="conteudo" style="margin: 5%;">
                 <h2>Conteudo</h2>
                 <table>
                     <td>
@@ -121,14 +121,13 @@
                         </ul>
 
                         <form action="viewcurso.html" method="get" >
-                            <input  type="submit" value="Começar">
-                        </form>					        
-
+                            <input class="botao3d" type="submit" value="Começar">
+                        </form>		
+                    </br>			        
                     </td>
                 </table>
             </div>
-
-
+            </br>
         </div>
 
         <div id="rodape">
