Add dos vídeos do primeiro modulo

--- a/viewcurso.html
+++ b/viewcurso.html
@@ -50,18 +50,19 @@
             </header>
 
             <header id="sumario">
-                <h4>Introdução a Programação com Python</h4>
+                <h4><a href="detalhescursos.html">Introdução a Programação com Python</h4></a>
                 <nav>
                     <ul>
                         <li id="link-apostila"><a href="#apostila">Apostila</a></li>
                         <li id="link-unidade"><a href="#unidade">1º Modulo: Intrudução ao curso</a></li>
                         <ol>
-                            <li id="link-aula1"><a href="#aula1">O que é programação?</a></li>
-                            <li id="link-l"><a href="#l">Linguagens</a></li>
-                            <li id="link-fracao2"><a href="#fracao2">Linguagem utilizada no curso</a></li>
-                            <li id="link-fracao3"><a href="#fracao3">Preparação da maquina para inicar os estudos</a></li>
+                            <li id="link-aula1"><a href="#aula1">Noções de Lógica de programação e algoritmos</a></li>
+                            <li id="link-aula1.2"><a href="#aula1.2">Fases Básicas da construção de algoritmos e suas representações</a></li>
+                            <li id="link-aula1.3"><a href="#aula1.3">Coneitos básicos de lógica de programação e linguagens de programação</a></li>
+                            <li id="link-aula2"><a href="#aula2">Preparação da maquina para inicar os estudos</a></li>
+                            <li id="link-dica01"><a href="#dica01">Dica 01: Ambiente de programação alternativo</a></li>
                         </ol>
-                        <li id="link-unidade"><a href="#unidade">2º Modulo: Introdução a programação</a></li>
+                        <li id="link-unidade2"><a href="#unidade2">2º Modulo: Introdução a programação</a></li>
                         <ol>
                             <li id="link-fracao"><a href="#fracao">Variáveis</a></li>
                             <li id="link-fracao1.1"><a href="#fracao1.1">Estruturas Sequencial</a></li>
@@ -93,8 +94,11 @@
                         <hgroup id="infoUnidade">
                             <h1>1º Módulo</h1>
                             <ul>
-                            <h2>1 - Revisão: frações, potenciação, radiciação, produtos notáveis.</h2>
-                            <h2>2 - Funções: função do 1º grau, função do 2º grau, logaritmo, exponencial, seno, cosseno.</h2>
+                            <h2>1 - Noções de Lógica de programação e algoritmos.</h2>
+                            <h2>2 - Fases Básicas da construção de algoritmos e suas representações.</h2>
+                            <h2>3 - Coneitos básicos de lógica de programação e linguagens de programação</h2>
+                            <h2>4 - Preparação da maquina para inicar os estudos</h2>
+                            <h2>5 - Dica 01: Ambiente de programação alternativo</h2>
                             </ul>
                         </hgroup>
                     </article>
@@ -102,14 +106,62 @@
 
                 <section id="aula1" class="content">
                     <article class="box">
-                        <h1>Aula 1</h1>
+                        <h1>Aula 1: Noções de Lógica de programação e algoritmos</h1>
                         <div class="videoaula">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/CouiwavgnB8" frameborder="0" 
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/6R2goK3-WY8" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
+
+                <section id="aula1.2" class="content">
+                    <article class="box">
+                        <h1>Aula 1.2: Fases Básicas da construção de algoritmos e suas representações</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/k6XfTFIxNqI" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
+
+                <section id="aula1.3" class="content">
+                    <article class="box">
+                        <h1>Aula 1.3: Coneitos básicos de lógica de programação e linguagens de programação</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Wt_AodndnJs" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
+
+
+                <section id="aula2" class="content">
+                    <article class="box">
+                        <h1>Aula 2: Preparação da maquina para inicar os estudos</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z19dFUhuaJY" frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen></iframe>
                         </div>
                     </article>
                 </section>
+
+                <section id="dica01" class="content">
+                    <article class="box">
+                        <h1>Dica 01</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/L9gmVX4lMW4" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
+
+
+
 
             </section>
 
