Adição de vídeos

--- a/viewcurso.html
+++ b/viewcurso.html
@@ -92,7 +92,11 @@
                             <li id="link-aula7">Aula 7: Estruturas de repetição</li>
                             <ol>
                                 <li id="link-aula7.1"><a href="#aula7.1">Aula 7.1: While</a></li>
-                                <li id="link-aula7.2"><a href="#aula7.2">Aula 7.2: For</a></li>
+                                <li> Aula 7.2: For</li>
+                                    <ol>
+                                        <li id="link-aula7.2.1"><a href="#aula7.2.1">Aula 7.2.1: For Parte 1</a></li>
+                                        <li id="link-aula7.2.2"><a href="#aula7.2.2">Aula 7.2.2: For Parte 2</a></li>
+                                    </ol>
                             </ol>
                             <li id="link-aula8">Aula 8: Listas</li>
                             <ol>
@@ -102,7 +106,12 @@
                                 <li id="link-aula8.4"><a href="#aula8.4">Aula 8.4: Listas Parte 4</a></li>
                                 <li id="link-aula8.5"><a href="#aula8.5">Aula 8.5: Listas Parte 5</a></li>
                             </ol>
-                            <li id="link-aula9"><a href="#aula9">Aula 9: Sublistas</a></li>
+
+                            <li id="link-aula9">Aula 9: Sublistas</li>
+                                <ol>
+                                    <li id="link-aula9.1"><a href="#aula9.1">Aula 9.1: Sublistas Parte 1</a></li>
+                                    <li id="link-aula9.2"><a href="#aula9.2">Aula 9.2: Sublistas Parte 2</a></li>
+                                </ol>
 
                         </ol>
 
@@ -319,8 +328,9 @@
                     <article class="box">
                         <h1>Aula 6.2: Estrutura Condicional Parte 2</h1>
                         <div class="videoaula">
-
-                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/DggnI-JF98A" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>                        </div>
                     </article>
                 </section>
 
@@ -338,10 +348,24 @@
                     </article>
                 </section>
 
-                <section id="aula7.2" class="content">
+                <section id="aula7.2.1" class="content">
                     <article class="box">
-                        <h1>Aula 7.2: Comando de repetição For</h1>
+                        <h1>Aula 7.2.1: Comando de repetição For (Parte 1)</h1>
                         <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/rljWtq7fjOc" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
+
+                <section id="aula7.2.2" class="content">
+                    <article class="box">
+                        <h1>Aula 7.2.2: Comando de repetição For (Parte 2)</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/bYkHmzgIePA" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>                        
                         </div>
                     </article>
                 </section>
@@ -401,15 +425,27 @@
                     </article>
                 </section>
 
-                <section id="aula9" class="content">
+                <section id="aula9.1" class="content">
                     <article class="box">
-                        <h1>Aula 9: SubListas</h1>
+                        <h1>Aula 9.1: SubListas Parte 1</h1>
                         <div class="videoaula">
-                            
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/kPAqHxWSPfY" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </article>
                 </section>
 
+                <section id="aula9.2" class="content">
+                    <article class="box">
+                        <h1>Aula 9.2: SubListas Parte 2</h1>
+                        <div class="videoaula">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JqKJ_FlWDl8" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </article>
+                </section>
 
             </section>
 
