Mudança no visual

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
-        <link rel="stylesheet" type="text/css" href="_css/style.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="_css/styleshowcurso.css" media="screen" />
-        <script src="_css/_javascript/script.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/styleshowcurso.css" media="screen" />
+        <script src="js/script.js"></script>
 
         <!--------------------- Bootstrap ---------------------------->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -51,7 +51,7 @@
             <div class="Logocurso" style="margin-left:20px;">
                 <table>
                     <td>
-                        <img src="_img/_icon/python.png">
+                        <img src="img/icon/python.png">
                     </td>
                     <td>
                         <h3>Curso de</h3>
@@ -64,10 +64,10 @@
                     <td>
                         <h3>Inscrito</h3>
                         <br>
-                        <img src="_img/_icon/naoinscrito.PNG" id="estadoInscrito">
+                        <img src="img/icon/naoinscrito.PNG" id="estadoInscrito">
                     </td>
                     <td>
-                        <img src="_img/linha.png" id="linha">
+                        <img src="img/linha.png" id="linha">
                     </td>
                     <td>
                         <h3>Preço</h3>
@@ -75,7 +75,7 @@
                         <h2>Gratis</h2>
                     </td>
                     <td>
-                        <img src="_img/linha.png" id="linha">
+                        <img src="img/linha.png" id="linha">
                     </td>
                     <td>
                         <h3>Começar Agora</h3>
@@ -128,14 +128,6 @@
                 </table>
             </div>
             </br>
-        </div>
-
-        <div id="rodape">
-            <footer id="rodape">
-                <p>Copyright &copy; 2020 - SM<br/>
-                <a href="http://facebook.com" target="_blank"> Facebook </a>|
-                <a href="http://instagram.com" target="_blank"> Instagram</a></p>
-            </footer>
         </div>
     </body>
 </html>
