--- a/viewcurso.html
+++ b/viewcurso.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
-        <link rel="stylesheet" type="text/css" href="_css/style.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="_css/styleviewcursoV1.css" media="screen" />
-        <script src="_css/_javascript/script.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="css/styleviewcursoV1.css" media="screen" />
 
         <!--------------------- Bootstrap ---------------------------->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -32,7 +31,7 @@
                             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                            
 
-                            <a href="login.html" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="_img/_icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
+                            <a href="login.html" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="img/icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
                             
                         </form>
                     </div>
