Mudança no index

--- a/sobre.html
+++ b/sobre.html
@@ -42,7 +42,7 @@
                         <div class="row">    
                             <li class="col-sm"><a href="cursos.html" style="color: white;">Cursos</a></li>
                             <li class="col-sm"><a href="sobre.html" style="color: white;">Sobre</a></li>
-                            <li class="col-sm"><a href="#Validar" style="color: white;">Validar Certificado </a></li>
+                            <li class="col-sm"><a href="#contato" style="color: white;">Contato</a></li>
                         </div>
                     </ul>
             </div>
