--- a/cursos.html
+++ b/cursos.html
@@ -57,24 +57,25 @@
             
         </header>
     
-
-        <table style="margin:20px;">
-            <h4 style = 'padding: 10px;'> Explore os Cursos </h4>
-            <p></p>
-            <tr>
-                <td>
-                    <div>
-                        <div class="curso"  align="center">
-                            <a target="_blank" href="detalhescursos.html#Python">
-                                <img src= "./img/icon/python.png" id ="curso">                                
-                                <b><p>Python</p></b>                             
-                                <p id='curso'> Aprenda Algoritmos e Lógica de Programação de forma simples com 10 aulas bem descontraídas.</p>
-                                <h5>Mais Detalhes</h5>
-                            </a>
+        <div id="conteudo">
+            <table style="margin:20px;">
+                <h4 style = 'padding: 10px;'> Explore os Cursos </h4>
+                <p></p>
+                <tr>
+                    <td>
+                        <div>
+                            <div class="curso"  align="center">
+                                <a href="detalhescursos.html#Python">
+                                    <img src= "./img/icon/python.png" id ="curso">                                
+                                    <b><p>Python</p></b>                             
+                                    <p id='curso'> Aprenda Algoritmos e Lógica de Programação de forma simples com 10 aulas bem descontraídas.</p>
+                                    <h5>Mais Detalhes</h5>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </td>
-            </tr>
-        </table>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
