--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -59,86 +59,88 @@
         
         </header>
 
-        <div class="Logocurso" style="margin-left:20px;">
-                <table>
-                    <td>
-                        <img src="img/icon/python.png">
-                    </td>
-                    <td>
-                        <h3>Curso de</h3>
-                        <h1>Introdução a programação com Python</h1>
-                    </td>
-                </table>
-            </div>
-            <div class="infocurso" style="margin-left:25%; max-width: 160px;">
-                <table>
-                    <td>
-                        <h3>Inscrito</h3>
-                        <br>
-                        <img src="img/icon/naoinscrito.PNG" id="estadoInscrito">
-                    </td>
-                    <td>
-                        <img src="img/linha.png" id="linha">
-                    </td>
-                    <td>
-                        <h3>Preço</h3>
-                        <br>
-                        <h2>Gratis</h2>
-                    </td>
-                    <td>
-                        <img src="img/linha.png" id="linha">
-                    </td>
-                    <td>
-                        <h3>Começar Agora</h3>
-                        <form action="cadastro.html" method="get" >
-                            <input  type="submit" value="Faça o login ou o Cadastro">
-                        </form>					        
-                    </td>
-                </table>
-            </div>
+        <div id="conteudo">
+            <div class="Logocurso" style="margin-left:20px;">
+                    <table>
+                        <td>
+                            <img src="img/icon/python.png">
+                        </td>
+                        <td>
+                            <h3>Curso de</h3>
+                            <h1>Introdução a programação com Python</h1>
+                        </td>
+                    </table>
+                </div>
+                <div class="infocurso" style="margin-left:25%; max-width: 160px;">
+                    <table>
+                        <td>
+                            <h3>Inscrito</h3>
+                            <br>
+                            <img src="img/icon/naoinscrito.PNG" id="estadoInscrito">
+                        </td>
+                        <td>
+                            <img src="img/linha.png" id="linha">
+                        </td>
+                        <td>
+                            <h3>Preço</h3>
+                            <br>
+                            <h2>Gratis</h2>
+                        </td>
+                        <td>
+                            <img src="img/linha.png" id="linha">
+                        </td>
+                        <td>
+                            <h3>Começar Agora</h3>
+                            <form action="cadastro.html" method="get" >
+                                <input  type="submit" value="Faça o login ou o Cadastro">
+                            </form>					        
+                        </td>
+                    </table>
+                </div>
 
-            <div class="descricao">
-                <p>Hoje em dia, algoritmos computacionais estão presentes em quase tudo na nossa vida. Além 
-                    dos tradicionais computadores e notebooks, muitos estão totalmente acostumados com o uso
-                     de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas 
-                     personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia.</p>
-            </div>
+                <div class="descricao">
+                    <p>Hoje em dia, algoritmos computacionais estão presentes em quase tudo na nossa vida. Além 
+                        dos tradicionais computadores e notebooks, muitos estão totalmente acostumados com o uso
+                        de aplicativos para smartphones e tablets, TVs inteligentes podem executar programas 
+                        personalizados e até mesmo outros aparelhos que usamos no nosso dia-a-dia.</p>
+                </div>
 
-            <div class="apresentacaocurso">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VSFgDCtfS_8" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen></iframe>    
-            </div>
+                <div class="apresentacaocurso">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VSFgDCtfS_8" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>    
+                </div>
 
-            <div class="conteudo" style="margin: 5%;">
-                <h2>Conteudo</h2>
-                <table>
-                    <td>
-                        <h3>1º Modulo: Intrudução ao curso</h3>
-                        <ul>
-                            <li>O que é programação?</li>
-                            <li>Linguagens</li>
-                            <li>Linguagem utilizada no curso</li>
-                            <li>Preparação da maquina para inicar os estudos</li>
-                        </ul>
-                        <h3>2º Modulo: Introdução a programação</h3>
-                        <ul>
-                            <li>Variáveis</li>
-                            <li>Estruturas Sequencial</li>
-                            <li>Entrada e Saída</li>
-                            <li>Estruturas condicionais</li>
-                            <li>Estruturas de repetição</li>
-                            <li>Listas</li>
-                        </ul>
+                <div class="conteudo" style="margin: 5%;">
+                    <h2>Conteudo</h2>
+                    <table>
+                        <td>
+                            <h3>1º Modulo: Intrudução ao curso</h3>
+                            <ul>
+                                <li>O que é programação?</li>
+                                <li>Linguagens</li>
+                                <li>Linguagem utilizada no curso</li>
+                                <li>Preparação da maquina para inicar os estudos</li>
+                            </ul>
+                            <h3>2º Modulo: Introdução a programação</h3>
+                            <ul>
+                                <li>Variáveis</li>
+                                <li>Estruturas Sequencial</li>
+                                <li>Entrada e Saída</li>
+                                <li>Estruturas condicionais</li>
+                                <li>Estruturas de repetição</li>
+                                <li>Listas</li>
+                            </ul>
 
-                        <form action="viewcurso.html" method="get" >
-                            <input class="botao3d" type="submit" value="Começar">
-                        </form>		
-                    </br>			        
-                    </td>
-                </table>
+                            <form action="viewcurso.html" method="get" >
+                                <input class="botao3d" type="submit" value="Começar">
+                            </form>		
+                        </br>			        
+                        </td>
+                    </table>
+                </div>
+                </br>
             </div>
-            </br>
         </div>
     </body>
 </html>
