--- a/viewcurso.html
+++ b/viewcurso.html
@@ -124,7 +124,7 @@
                     <article class="box">
                         <h1>Apostila</h1>
                         <div class="apostila">
-                            <embed id="pdf" src="Introdução a Programação com Python.pdf"/>
+                            <embed id="pdf" src="apostila/Introdução a Programação com Python.pdf"/>
                         </div>
                     </article>
                 </section>
