--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarSupportedContent">
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <a href="login.html" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="img/icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
+                        <a href="login.php" aria-expanded="true" id="TLink1" href="#" onclick="togglePerfil('popupPerfil', 'TLink1')"><img src="img/icon/user-icon.png" style="width: 40px; height: 40px;" /></a>
                         
                         
                     </form>
