Atualização da div requisitos

--- a/detalhescursos.html
+++ b/detalhescursos.html
@@ -75,12 +75,12 @@
                     <tr>
                         <th><i class="fa fa-clock-o fa-2x" aria-hidden="true"></i></th> 
                         <td>Dedicação estimada</td>
-                        <th>18h</th>
+                        <th>8h</th>
                     </tr>
                     <tr>
                         <th><i class="fa fa-film fa-2x" aria-hidden="true"></i></th> 
                         <td>Vídeo sobre demanda</td>
-                        <th>13,5 h</th>
+                        <th>4h</th>
                     </tr>
                     <tr>
                         <th><i class="fa fa-book fa-2x" aria-hidden="true"></i></th> 
@@ -102,14 +102,12 @@
                 </br>
 
 
-                <div class=" panel panel-success"  style="margin-left: 10%; margin-right: 10%;">
-                    <div class=" panel-heading">
+                <div class="sucesso"  style="margin-left: 10%; margin-right: 10%;">
                       <h3 class="fa fa-flag fa-1x panel-title"> Pré-requisitos</h3>
-                    </div>
-                    <p  style="background-color: white;">
+                    <div >
                         Não há pré-requisitos para esse curso, sugere-se ter Ensino Médio completo 
                         (não obrigatório).
-                    </p>
+                    </div>
               </div>
 
                
