Adição das atividades

--- a/viewcurso.html
+++ b/viewcurso.html
@@ -297,12 +297,11 @@
             <section id="atividade1" class="content">
                 <article class="box">
                     <h1>Atividade 1</h1>
-                    <div class="videoaula">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb27BY0qw1M3rmPPrEDtwRnOcuqXuB39nIbxGxHI1DAHmWxw/viewform?embedded=true" 
-                        width="640" height="380" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>                    </div>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2vYKVMGWfeHJRnNYM4sF8D1vFdwn7JrMUK2Q7YUz2S6l0CA/viewform?embedded=true" width="640" height="789" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>            </section>
+                    </div>
                 </article>
             </section>
-
 
             <section id="aula1.2" class="content">
                 <article class="box">
@@ -312,6 +311,15 @@
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                         gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
+                </article>
+            </section>
+
+            
+            <section id="atividade2" class="content">
+                <article class="box">
+                    <h1>Atividade 2</h1>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfdBwffE0pNEzN1vmKIoUo4fhrpNlT6m95VmOMSQ1n-1lFpnw/viewform?embedded=true" width="640" height="789" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>                    </div>
                 </article>
             </section>
 
@@ -326,6 +334,14 @@
                 </article>
             </section>
 
+            <section id="atividade3" class="content">
+                <article class="box">
+                    <h1>Atividade 3</h1>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSelkw8WLMr4ttXF4wW-aOaYfzx8pyUecx0QaAT5Ybvd4PWx0g/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    </div>
+                </article>
+            </section>
 
             <section id="aula2" class="content">
                 <article class="box">
@@ -378,6 +394,15 @@
                 </article>
             </section>
 
+            <section id="atividade4" class="content">
+                <article class="box">
+                    <h1>Atividade 4</h1>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtlNJRQtbGL0CLtotmMxkYZt-86SfbJC6I96jnw0U3KrW7Vg/viewform?embedded=true" width="640" height="632" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    </div>
+                </article>
+            </section>
+
             <section id="aula3.2" class="content">
                 <article class="box">
                     <h1>Aula 3: Variáveis Parte 2</h1>
@@ -388,6 +413,16 @@
                     </div>
                 </article>
             </section>
+
+            <section id="atividade5" class="content">
+                <article class="box">
+                    <h1>Atividade 5</h1>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeUXYfyWNz8BdsGzSCEX668TfoCiX49MzlnUUV7PxY6b-NAcA/viewform?usp=sf_link" width="640" height="632" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    </div>
+                </article>
+            </section>
+
 
             <section id="aula3.3" class="content">
                 <article class="box">
@@ -400,7 +435,14 @@
                 </article>
             </section>
 
-
+            <section id="atividade4" class="content">
+                <article class="box">
+                    <h1>Atividade 4</h1>
+                    <div class="atividade">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgjODxE70P_DSOQqqurq-CTRq8ys-3mlSydBgkSwJcS62WzQ/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+                    </div>
+                </article>
+            </section>
             
             <section id="aula4.1" class="content">
                 <article class="box">
